--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
   },
   "dependencies": {
     "@prisma/client": "^5.7.1",
+    "cloudinary": "^2.0.0-rc",
     "formik": "^2.4.5",
     "md5": "^2.3.0",
     "next": "14.0.4",
     "next-auth": "^4.24.5",
+    "next-cloudinary": "^5.18.0",
     "nextjs-toploader": "^1.6.4",
     "react": "^18",
     "react-dom": "^18",
