--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "nextjs-toploader": "^1.6.4",
     "react": "^18",
     "react-dom": "^18",
-    "react-hot-toast": "^2.4.1"
+    "react-hot-toast": "^2.4.1",
+    "react-quill": "^2.0.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.0.1",
